FIX: [#34467] File Browser Deletes Unselected Files

* delete now acts on selected file(s) rather than the highlighted file.